netwerk/protocol/http/src/nsHttp.h
@@ -97,6 +97,8 @@ typedef PRUint8 nsHttpVersion;
 #define NS_HTTP_DEFAULT_PORT  80
 #define NS_HTTPS_DEFAULT_PORT 443
 
+#define NS_HTTP_HEADER_SEPS ", \t"
+
 //-----------------------------------------------------------------------------
 // http atoms...
 //-----------------------------------------------------------------------------
