netwerk/protocol/http/src/nsHttpChannel.h
@@ -118,6 +118,7 @@ private:
     nsresult ProcessRedirection(PRUint32 httpStatus);
     nsresult ProcessAuthentication(PRUint32 httpStatus);
     nsresult GetCallback(const nsIID &aIID, void **aResult);
+    PRBool   ResponseWouldVary();
 
     // redirection specific methods
     void     HandleAsyncRedirect();
